--- a/render.yaml
+++ b/render.yaml
@@ -2,7 +2,7 @@ services:
 - type: web
   name: wordpress
   env: docker
-  plan: standard
+  plan: starter
   autoDeploy: false
   disk:
     name: wordpress
@@ -33,7 +33,7 @@ services:
   name: mysql-wordpress
   repo: https://github.com/render-examples/mysql.git
   env: docker
-  plan: standard
+  plan: starter
   autoDeploy: false
   disk:
     name: mysql-wordpress
